tests/test_assets/semantic/valid/strings/returns.cog
return_string_ok::() -> u8[6] {
    return "hello";
}