tests/test_assets/semantic/invalid/casts/compile_time_return_range.cog
test::() -> u8 {
    return cast(u8, 256);
}